--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "mern-stack",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -10,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "cookie-parser": "^1.4.6",
     "css-animation": "^2.0.4",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.1.0",
